--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-switch": "^5.0.1",
     "react-test-renderer": "^16.12.0",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "typescript": "^3.7.5"
   },
   "scripts": {
