--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -6,14 +6,14 @@
 		}
 	},
 	"function": {
-		"itemsfunction": {
+		"userProfileFunc": {
 			"service": "Lambda",
 			"providerPlugin": "awscloudformation",
 			"build": true,
 			"dependsOn": [
 				{
 					"category": "storage",
-					"resourceName": "itemdynamoDB",
+					"resourceName": "userProfile",
 					"attributes": [
 						"Name",
 						"Arn"
@@ -23,7 +23,7 @@
 		}
 	},
 	"storage": {
-		"itemdynamoDB": {
+		"userProfile": {
 			"service": "DynamoDB",
 			"providerPlugin": "awscloudformation"
 		}
@@ -36,13 +36,13 @@
 		}
 	},
 	"api": {
-		"items": {
+		"userProfileApi": {
 			"service": "API Gateway",
 			"providerPlugin": "awscloudformation",
 			"dependsOn": [
 				{
 					"category": "function",
-					"resourceName": "itemsfunction",
+					"resourceName": "userProfileFunc",
 					"attributes": [
 						"Name",
 						"Arn"
