--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-toastify": "^5.5.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "uuidv4": "^6.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
