--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-spinners": "^0.8.0",
     "react-switch": "^5.0.1",
     "react-test-renderer": "^16.12.0",
     "react-toastify": "^5.5.0",
