--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,10 +1,5 @@
 {
-	"hosting": {
-		"S3AndCloudFront": {
-			"service": "S3AndCloudFront",
-			"providerPlugin": "awscloudformation"
-		}
-	},
+	"hosting": {},
 	"function": {
 		"itemfunction": {
 			"service": "Lambda",
