--- a/package.json
+++ b/package.json
@@ -16,20 +16,21 @@
     "aws-amplify": "^2.2.2",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "rc-slider": "^9.1.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-dropdown": "^1.6.4",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^4.0.0",
     "react-spinners": "^0.8.0",
     "react-switch": "^5.0.1",
     "react-test-renderer": "^16.12.0",
     "react-toastify": "^5.5.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "serialize-javascript": "^5.0.1",
     "typescript": "^3.7.5",
     "uuidv4": "^6.0.2"
   },
