--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.0",
+    "react-select": "^3.1.0",
     "react-spinners": "^0.8.0",
     "react-switch": "^5.0.1",
     "react-test-renderer": "^16.12.0",
